# pyannote-pipeline

./: .buildinfo  .gitattributes  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  changelog.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  versioneer.py
.github/workflows/: publish.yml  test.yml
_sources/: changelog.rst.txt
_static/: documentation_options.js
doc/: Makefile  make.bat
doc/source/: changelog.rst  conf.py  index.rst
pyannote/: __init__.py
pyannote/pipeline/: __init__.py  _version.py  cli.py  experiment.py  optimizer.py  parameter.py  pipeline.py
pyannote/pipeline/blocks/: __init__.py  classification.py  clustering.py
src/pyannote/pipeline/: __init__.py  optimizer.py
tests/: __init__.py  test_optimizer.py  test_parameters.py  test_pipeline.py  utils.py
