[project]
name = "pyannote-pipeline"
description = "Tunable pipelines"
readme = "README.md"
authors = [
    { name = "Hervé BREDIN", email = "herve@pyannote.ai" }
]
requires-python = ">=3.10"

dynamic = [
  "version",
]

dependencies = [
    "filelock>=3.17.0",
    "optuna>=4.2.0",
    "pyannote-core>=5.0.0",
    "pyannote-database>=5.1.3",
    "pyyaml>=6.0.2",
    "tqdm>=4.67.1",
]

[project.scripts]
pyannote-pipeline = "pyannote.pipeline.experiment:main"


[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
]
doc = [
    "sphinx-rtd-theme>=3.0.2",
    "sphinx>=8.1.3",
]
cli = [
    "docopt>=0.6.2",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/pyannote"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
